[metadata]
name = WSL-Port-Forwarding
version = 1.0.4b1
author = ColorsWind
author_email = colors_wind@outlook.com
description = A script that enable outside program access WSL2 ports by port forwarding.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ColorsWind/WSL-Port-Forwarding
project_urls = 
	Bug Tracker = https://github.com/ColorsWind/WSL-Port-Forwarding/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	port_forwarding = wsl_port_forwarding.port_forwarding:main

[egg_info]
tag_build = 
tag_date = 0

